--- a/style/main.css
+++ b/style/main.css
@@ -297,6 +297,7 @@ header {
 }
 .price-title {
     font-size: 28px;
+    margin-bottom: 46px;
 }
 
 .prices-text {
@@ -312,4 +313,60 @@ header {
 
 .price-text {
     font-size: 18px;
+    color: #163a24;
+}
+
+.price-info + a {
+    width: 244px;
+    height: 52px;
+    background-color: #198c36;
+    border-radius: 26px;
+    padding: 15px 25px;
+    color:#fbfaf7 ;
+    font-family: 'Noto Sans', sans-serif;
+    font-weight: 400;
+    line-height: 22px;
+    margin-bottom: 124px;
+}
+
+.ebook {
+    width: 100%;
+    height: 753px;
+    padding: 120px 0;
+
+}
+.ebook-title {
+    margin-bottom: 25px;
+}
+
+.ebook-text {
+    margin-bottom: 19px;
+    color: #163a24;
+}
+
+.ebook-row {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin-bottom: 120px;
+}
+.ebook-link {
+    width: 191px;
+    height: 52px;
+    background-color: #198c36;
+    border-radius: 26px;    
+    font-family: 'Noto Sans', sans-serif;
+    font-weight: 400;
+    line-height: 22px;
+    padding: 15px 25px;
+    margin-top: 38px;
+}
+
+.ebook-link a {
+    color:#fbfaf7 ;
+}
+.ebook-img {
+    margin-top: 120px;
+    width: 492px;
+    height: 510px;
 }
